# rinf-router

./: .gitignore  .taplo.toml  CHANGELOG.md  Cargo.toml  README.md  rust-toolchain.toml  rustfmt.toml
.github/workflows/: rust.yml
src/: extractor.rs  handler.rs  helpers.rs  into_response.rs  lib.rs  logging.rs  router.rs  service.rs  test_helpers.rs
tests/: handler.rs
