[package]
authors     = [ "Frederik Haaning <fh@frederikhaaning.dk>" ]
description = "Router and handler framework for RINF-based Flutter <> Rust apps"
edition     = "2024"
keywords    = [ "rinf", "flutter", "router" ]
name        = "rinf-router"
readme      = "README.md"
repository  = "https://github.com/asaphaaning/rinf-router"
version     = "1.4.0"

categories = [ "asynchronous", "rust-patterns" ]

license      = "Apache-2.0"
rust-version = "1.85.0"

[features]
default               = [ "rt-agnostic", "tokio-rt-multi-thread" ]
logging               = [ "dep:tracing", "tracing/log" ]
rt-agnostic           = [ "dep:futures" ]
test-helpers          = [ "dep:futures" ]
tokio-rt              = [ "dep:tokio", "tokio/rt" ]
tokio-rt-multi-thread = [ "dep:tokio", "tokio/rt-multi-thread" ]
tracing               = [ "logging", "tracing/tracing-attributes", "tracing/attributes" ]

[dependencies]
async-trait   = "0.1"
futures       = { version = "0.3", optional = true }
rinf          = "8.6.0"
serde         = { version = "1.0", features = [ "derive" ] }
tokio         = { version = "1.45", optional = true, features = [ "macros", "rt" ] }
tower         = { version = "0.5", features = [ "util" ] }
tower-service = "0.3"
tracing       = { version = "0.1", default-features = false, optional = true }

[dev-dependencies]
futures     = { version = "0.3" }
serial_test = "3.2"

[dev-dependencies.tokio]
features = [ "macros", "sync", "time", "rt" ]
version  = "1.45"

[lints]
workspace = true

[workspace.lints.rust]
missing_docs     = "deny"
rust_2018_idioms = { level = "warn", priority = -1 }
unsafe_code      = "deny"

[workspace.lints.rustdoc]
broken_intra_doc_links = "warn"

[workspace.lints.clippy]
module_name_repetitions = "allow"
new_without_default     = "allow"

# Lower priority to allow clippy.toml override
expect_used        = "deny"
missing_panics_doc = "warn"
unwrap_in_result   = "deny"
unwrap_used        = { level = "warn", priority = -1 }

cast_lossless                      = "warn"
checked_conversions                = "warn"
clone_on_ref_ptr                   = "warn"
inefficient_to_string              = "warn"
large_enum_variant                 = "warn"
large_stack_arrays                 = "warn"
panic_in_result_fn                 = "warn"
rc_buffer                          = "warn"
redundant_clone                    = "warn"
redundant_closure_for_method_calls = "warn"
unnecessary_wraps                  = "warn"

cargo       = { level = "warn", priority = -2 }
correctness = { level = "deny", priority = -2 }
perf        = { level = "deny", priority = -2 }
suspicious  = { level = "deny", priority = -2 }
